--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /*Importing Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
+
+:root {
+    --line-border-fill: #3498db;
+    --line-border-empty: #e0e0e0;
+}
 * {
     box-sizing: border-box;
 }
@@ -31,7 +36,7 @@ body {
 
 .progress-container ::before {
     content: '';
-    background-color: #e0e0e0;
+    background-color: var(--line-border-empty);
     position: absolute;
     top: 50%;
     left: 0;
@@ -42,7 +47,7 @@ body {
 }
 
 .progress {
-    background-color: rgba(49, 76, 102, 0.8);
+    background-color:var(--line-border-fill);
     position: absolute;
     top: 50%;
     left: 0;
@@ -61,11 +66,29 @@ body {
     width: 30px;
     align-items: center;
     justify-content: center;
-    border: 3px solid rgb(137, 149, 153);
+    border: 3px solid var(--line-border-empty);
     transition: .4s ease;
 }
 
 .circle.active {
-    border-color: lightblue;
+    border-color: var(--line-border-fill);
 }
 
+.btn {
+    background-color: var(--line-border-fill);
+    color: white;
+    border: 0;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin: 5px;
+    font-size: 14px;
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
+.btn:focus {
+    outline: 0;
+}
