Finished css styling

--- a/style.css
+++ b/style.css
@@ -92,3 +92,7 @@ body {
 .btn:focus {
     outline: 0;
 }
+.btn:disabled {
+    background-color: var(--line-border-empty);
+    cursor: not-allowed;
+}
