--- a/rotatingNavigation/rotatingNav.css
+++ b/rotatingNavigation/rotatingNav.css
@@ -1,21 +1,28 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
+    font-family: 'Lato', sans-serif;
+    background-color: lightgreen;
+    overflow-x: hidden;
     margin: 0;
 }
 
 .bun {
     height: 400px;
 }
+
+.container {
+    background-color: lightsalmon;
+}
+
+container.show-nav {
+    transform: rotate(-20);
+    transform-origin: top left;
+    transition: transform 0.5s linear;
+}
+
