--- a/rotatingNavigation/rotatingNav.css
+++ b/rotatingNavigation/rotatingNav.css
@@ -75,6 +75,19 @@ body {
     transform-origin: top left;
 }
 
+nav {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+    z-index: 100;
+}
+
+nav ul {
+    list-style-type: none;
+    padding-left: 30px;
+
+}
+
 .content {
     max-width: 1000px;
     margin: 50px auto;
