--- a/hiddenSearchWidget/hiddenSearchWidget.css
+++ b/hiddenSearchWidget/hiddenSearchWidget.css
@@ -6,12 +6,31 @@
 }
 
 body {
+    background-image: linear-gradient(90deg, #9117a1, #e97cc8);
     font-family: 'Roboto', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.search {
+    position: relative;
+    height: 50px;
+}
+
+.search .input {
+    background-color: white;
+    border: 0;
+    font-size: 18px;
+    padding: 15px;
+    height: 50px;
+    width: 50px;
+    transition: width 0.3 ease;
+}
+
+.btn {
+    
 }
