--- a/blurryLoading/blurryLoading.css
+++ b/blurryLoading/blurryLoading.css
@@ -1,12 +1,12 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubunto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,3 +15,21 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.bg {
+    background: url('https://149366112.v2.pressablecdn.com/wp-content/uploads/2019/03/shutterstock_1693785667-scaled.jpg')
+    no-repeat center center/cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    filter: blur(0px)
+}
+
+.loading-text {
+    font-size: 50px;
+    color: #fff;
+}
+
