--- a/scrollAnimation/scrollAnimation.css
+++ b/scrollAnimation/scrollAnimation.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 0;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -38,6 +39,7 @@ h1 {
 from the left and the right */
 .box:nth-of-type(even) {
     transform: translateX(-250%);
+    background-color: lightsalmon;
 }
 
 .box.show {
