--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -15,3 +15,31 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #333;
+}
+
+.split {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.split.left {
+    left: 0;
+    background-image: url('/splitLandingPage/images/have_bun.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.split.right {
+    right: 0;
+    background: url('./images/want_bun.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
