--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -1,6 +1,12 @@
 /*Importing Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+:root {
+    --left-bg-color: rgba(87, 84, 236, 0.7);
+    --right-bg-color: rgba(43, 43, 43, 0.7);
+}
+
 * {
     box-sizing: border-box;
 }
@@ -37,9 +43,27 @@ body {
     background-size: cover;
 }
 
+/* Creating Overlay */
+.split.left::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--left-bg-color);
+}
+
 .split.right {
     right: 0;
     background: url('./images/want_bun.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+/* Creating Overlay */
+.split.right::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--right-bg-color);
 }
