--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -13,13 +13,21 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+h1 {
+    font-size: 4rem;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translateX(-50%);
+    white-space: nowrap;
 }
 
 .container {
@@ -54,6 +62,7 @@ body {
 
 .split.right {
     right: 0;
+    top: 0;
     background: url('./images/want_bun.jpg');
     background-repeat: no-repeat;
     background-size: cover;
