--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -37,6 +37,24 @@ h1 {
     background: #333;
 }
 
+.btn {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #fff;
+    border: #fff solid 0.2rem;
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 15rem;
+    padding: 1.5rem;
+}
+
 .split {
     position: absolute;
     width: 50%;
