--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -5,6 +5,8 @@
 :root {
     --left-bg-color: rgba(87, 84, 236, 0.7);
     --right-bg-color: rgba(43, 43, 43, 0.7);
+    --left-btn-hover-color: rgba(87, 84, 236, 0.95);
+    --right-btn-hover-color: rgba(117, 88, 9, 0.95);
 }
 
 * {
@@ -54,6 +56,18 @@ h1 {
     width: 15rem;
     padding: 1.5rem;
 }
+
+.split.left .btn:hover {
+   background-color: var(--left-btn-hover-color);
+   color: black;
+   border-color: black;
+}
+
+.split.right .btn:hover {
+    background-color: var(--right-btn-hover-color);
+    color: black;
+    border-color: black;
+ }
 
 .split {
     position: absolute;
