--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -7,6 +7,8 @@
     --right-bg-color: rgba(43, 43, 43, 0.7);
     --left-btn-hover-color: rgba(87, 84, 236, 0.95);
     --right-btn-hover-color: rgba(117, 88, 9, 0.95);
+    --hover-width: 75%;
+    --other-width: 25%;
 }
 
 * {
@@ -107,4 +109,20 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--right-bg-color);
+}
+
+.hover-left .left {
+    width: var(--hover-width);
+}
+
+.hover-right .right {
+    width: var(--other-width);
+}
+
+.hover-right .left {
+    width: var(--hover-width);
+}
+
+.hover-left .right {
+    width: var(--other-width);
 }
