--- a/splitLandingPage/splitLandingPage.css
+++ b/splitLandingPage/splitLandingPage.css
@@ -9,6 +9,7 @@
     --right-btn-hover-color: rgba(117, 88, 9, 0.95);
     --hover-width: 75%;
     --other-width: 25%;
+    --speed: 1000ms;
 }
 
 * {
@@ -109,6 +110,14 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--right-bg-color);
+}
+
+/* Creating smooth transition for sides expanding & contracting */
+.split.right, 
+.split.left,
+.split.right::before, 
+.split.left::before {
+    transition: all var(--speed) ease-in-out;
 }
 
 .hover-left .left {
