--- a/formWaveAnimation/formWave.css
+++ b/formWaveAnimation/formWave.css
@@ -34,6 +34,26 @@ body {
     color: lightseagreen;
 }
 
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    background: rgb(139, 182, 180);
+    padding: 15px;
+    font-family: inherit;
+    font-size: 16px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.btn:focus {
+    outline: 0;
+}
+
+.btn:active {
+    transform: scale(.98)
+}
+
 .form-control {
     position: relative;
     margin: 20px 0 40px;
@@ -49,4 +69,8 @@ body {
     padding: 15px 0;
     font-size: 18px;
     color: white;
+}
+
+.form-control input:focus, .form-control input:valid {
+    outline: 0;
 }
