--- a/formWaveAnimation/formWave.css
+++ b/formWaveAnimation/formWave.css
@@ -54,6 +54,7 @@ body {
     transform: scale(.98)
 }
 
+
 .form-control {
     position: relative;
     margin: 20px 0 40px;
@@ -74,3 +75,9 @@ body {
 .form-control input:focus, .form-control input:valid {
     outline: 0;
 }
+
+.form-control label {
+    position: absolute;
+    top: 15px;
+    left: 0;
+} 
