--- a/formWaveAnimation/formWave.css
+++ b/formWaveAnimation/formWave.css
@@ -74,6 +74,7 @@ body {
 
 .form-control input:focus, .form-control input:valid {
     outline: 0;
+    border-bottom-color:lightskyblue;
 }
 
 .form-control label {
@@ -81,3 +82,15 @@ body {
     top: 15px;
     left: 0;
 } 
+
+.form-control label span {
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span  {
+    color: lightskyblue;
+    transform: translateY(-30px);
+}
