--- a/dadJokes/dadJokes.css
+++ b/dadJokes/dadJokes.css
@@ -34,3 +34,25 @@ h3 {
     opacity: 0.5;
     letter-spacing: 2px;
 }
+
+.joke {
+    font-size: 30px;
+    letter-spacing: 1px;
+    line-height: 40px;
+    margin: 50px auto;
+    max-width: 600px;
+}
+
+.btn {
+    background-color: #feddbe;
+    border: 0;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+    padding: 14px 40px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn:focus {
+    outline: 0;
+}
