--- a/faqCollapse/faq.css
+++ b/faqCollapse/faq.css
@@ -1,17 +1,22 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
+    color: #343f56;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
-    margin: 0;
+    font-family: 'Muli', sans-serif;
+    background-color: #f5e6ca;
+}
+
+h1 {
+    margin: 50px 0 30px;
+    text-align: center;
+}
+
+.faq-container {
+    max-width: 600px;
+    margin: 0 auto;
 }
