--- a/faqCollapse/faq.css
+++ b/faqCollapse/faq.css
@@ -71,3 +71,40 @@ h1 {
     display: block;
 }
 
+.faq-toggle {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 0;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+}
+
+.faq-toggle:focus {
+    outline: none;
+}
+
+.faq-toggle .fa-times {
+    display: none;
+    color: white;
+}
+
+.faq.active .faq-toggle .fa-times {
+    display: block;
+}
+
+.faq.active .faq-toggle .fa-chevron-down {
+    display: none;
+}
+
+.faq.active .faq-toggle {
+    background-color: #343f56;
+}
