--- a/randomChoice/randomChoice.css
+++ b/randomChoice/randomChoice.css
@@ -1,12 +1,13 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Muli', sans-serif;
+    background-color: #aad8d3;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +15,19 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+h3 {
+    margin: 10px 0 20px;
+    color: #393e46;
+}
+
+.container {
+    width: 500px;
+}
+
+#textarea {
+    border: none;
+    display: block;
+    width: 100%;
 }
