--- a/randomChoice/randomChoice.css
+++ b/randomChoice/randomChoice.css
@@ -30,4 +30,24 @@ h3 {
     border: none;
     display: block;
     width: 100%;
+    height: 100px;
+    font-family: inherit;
+    padding: 10px;
+    margin: 0 0 20px;
+    font-size: 16px;
+}
+
+.tag {
+    background-color: #00ADB5;
+    color: #eeeeee;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 0 5px 10px 0;
+    font-size: 14px;
+    display: inline-block;
+}
+
+
+.tag.highlight {
+    background-color: #393e46;
 }
