--- a/incrementingCounter/incrementingCounter.css
+++ b/incrementingCounter/incrementingCounter.css
@@ -1,17 +1,26 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Staatliches', sans-serif;
+    background-color: #000000;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+    color: #892cdc;
+}
+
+.counter-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* Margin order: top, bottom, left, right */
+    margin: 30px 50px;
 }
