--- a/incrementingCounter/incrementingCounter.css
+++ b/incrementingCounter/incrementingCounter.css
@@ -23,4 +23,16 @@ body {
     justify-content: center;
     /* Margin order: top, bottom, left, right */
     margin: 30px 50px;
+    text-align: center;
+}
+
+.counter {
+    font-size: 60px;
+    margin-top: 10px;
+}
+
+@media(max-width: 580px) {
+    body {
+        flex-direction: column;
+    }
 }
