--- a/drinkWater/drinkWater.css
+++ b/drinkWater/drinkWater.css
@@ -1,17 +1,20 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril Fatface:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Abril Fatface', sans-serif;
+    color: #3161a3;
+    background-color: #ebfffb;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
-    margin: 0;
+    margin-bottom: 40px;
+}
+
+h1 {
+    margin: 10 0 0;
 }
