--- a/drinkWater/drinkWater.css
+++ b/drinkWater/drinkWater.css
@@ -18,3 +18,34 @@ body {
 h1 {
     margin: 10 0 0;
 }
+
+h3 {
+    font-weight: 400;
+    margin: 10px 0;
+}
+
+.cup {
+    background-color: #7efaff;
+    border: 4px solid #13abc4;
+    color: #13abc4;
+    border-radius: 0 0 40px 40px;
+    height: 330px;
+    width: 150px;
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.cup.cup-small {
+    width: 60px;
+    height: 95px;
+    border-radius: 0 0 20px 20px;
+    cursor: pointer;
+    font-size: 14px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 5px;
+    transition: 0.3s ease;
+}
