--- a/drinkWater/drinkWater.css
+++ b/drinkWater/drinkWater.css
@@ -66,7 +66,7 @@ h3 {
     justify-content: center;
 }
 
-.remaining {
+.waterLeft {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,13 +76,13 @@ h3 {
     transition: 0.3s ease;
 }
 
-.remaining span {
+.waterLeft span {
     font-size: 20px;
     font-weight: bold;
 
 }
 
-.remaining small {
+.waterLeft small {
     font-size: 12px;
 }
 
