--- a/movieApp/movieApp.css
+++ b/movieApp/movieApp.css
@@ -1,17 +1,25 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Limelight:wght@400;700&display=swap');
+
+
+:root {
+    --primary-color: #55b3b1;
+    --secondary-color: #af0069;
+}
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
+    background-color: var(--primary-color);
+    font-family: 'Limelight', sans-serif;
     margin: 0;
 }
+
+header {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
