--- a/movieApp/movieApp.css
+++ b/movieApp/movieApp.css
@@ -21,5 +21,58 @@ header {
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
+    background-color: var(--secondary-color);
 }
 
+.search {
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    border-radius: 50px;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    color: #09015f;
+}
+
+.search::placeholder {
+    color: #09015f;
+}
+
+.search:focus {
+    outline: none;
+    background-color: var(--primary-color);
+
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.movie {
+    width: 300px;
+    margin: 1rem;
+    background-color: #f6c065;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
+    border: solid #f6c065;
+    position: relative;
+    overflow: hidden;
+    border-radius: 2px;
+}
+
+.movie img {
+    width: 100%;
+}
+
+.movie-info {
+    color: #09015f;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+}
+
+.movie-info h3 {
+    margin-top: 0;
+}
