--- a/movieApp/movieApp.css
+++ b/movieApp/movieApp.css
@@ -76,3 +76,37 @@ main {
 .movie-info h3 {
     margin-top: 0;
 }
+
+.movie-info span {
+    padding: .25rem .5rem ;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.movie-info span.green {
+    color: lightgreen;
+}
+
+.movie-info span.orange {
+    color: orange;
+}
+
+.movie-info span.red {
+    color: red;
+}
+
+.overview {
+    background: white;
+    padding: 2rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    max-height: 100%;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in;
+}
+
+.movie:hover .overview {
+    transform: translateY(0);
+}
