--- a/backgroundSlider/backgroundSlider.css
+++ b/backgroundSlider/backgroundSlider.css
@@ -28,4 +28,32 @@ body::before {
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
+}
+
+.slider-container {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 
+    (0, 0, 0, 0.23);
+    height: 70vph;
+    width: 70vw;
+    position: relative;
+    overflow: hidden;
+}
+
+.slide {
+    opacity: 0;
+    height: 100vh;
+    width: 100vw;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: -15vh;
+    left: -15vw;
+    transition: 0.4s ease;
+    z-index: 1;
+}
+
+.slide.active {
+    opacity: 1;
+
 }
