--- a/backgroundSlider/backgroundSlider.css
+++ b/backgroundSlider/backgroundSlider.css
@@ -50,7 +50,7 @@ body::before {
     top: -15vh;
     left: -15vw;
     transition: 0.4s ease;
-    z-index: 1;
+    z-index: 100;
 }
 
 .slide.active {
@@ -65,8 +65,14 @@ body::before {
     z-index: 100;
     border: 2px solid orange;
     top: 50%;
-    z-index: 100;
     transform: translateY(-50%);
+    z-index: 4;
+    color: white;
+    cursor: pointer;
+}
+
+.arrow:focus {
+    outline: 0;
 }
 
 .left-arrow {
