--- a/themeClock/themeClock.css
+++ b/themeClock/themeClock.css
@@ -10,6 +10,10 @@
     --secondary-color: #fff;
 }
 
+html {
+    transition: all 0.5s ease-in;
+}
+
 html.dark {
     --primary-color: #fff;
     --secondary-color: #333;
@@ -28,4 +32,19 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.toggle {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: 0;
+    border-radius: 4px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 100px;
+    cursor: pointer;
+}
+
+toggle:focus {
+    outline: none;
 }
