--- a/themeClock/themeClock.css
+++ b/themeClock/themeClock.css
@@ -71,6 +71,7 @@ toggle:focus {
     height: 65px;
     width: 3px;
     transform-origin: bottom center;
+    transition: all 0.5s ease-in;
 }
 
 .needle.hour {
