--- a/buttonRipple/buttonRipple.css
+++ b/buttonRipple/buttonRipple.css
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #45046A;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +15,16 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+button {
+    background-color: #5C2A9D;
+    color: #F1EBBB;
+    border: solid #5C2A9D 1px;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px 30px;
+    overflow: hidden;
+    margin: 10px 0;
 }
