--- a/buttonRipple/buttonRipple.css
+++ b/buttonRipple/buttonRipple.css
@@ -21,10 +21,28 @@ button {
     background-color: #5C2A9D;
     color: #F1EBBB;
     border: solid #5C2A9D 1px;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 20px 30px;
+    padding: 40px 50px;
     overflow: hidden;
     margin: 10px 0;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+}
+
+button:focus {
+    outline: none;
+}
+
+button .circle {
+    position: absolute;
+    background-color: white;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    animation: scale 0.5s ease-out;
 }
