--- a/buttonRipple/buttonRipple.css
+++ b/buttonRipple/buttonRipple.css
@@ -21,11 +21,11 @@ button {
     background-color: #5C2A9D;
     color: #F1EBBB;
     border: solid #5C2A9D 1px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 40px 50px;
+    padding: 50px 60px;
     overflow: hidden;
     margin: 10px 0;
     border-radius: 10px;
@@ -39,7 +39,7 @@ button:focus {
 
 button .circle {
     position: absolute;
-    background-color: white;
+    background-color: #B5076B;
     width: 160px;
     height: 160px;
     border-radius: 50%;
