--- a/dragAndDrop/dragAndDrop.css
+++ b/dragAndDrop/dragAndDrop.css
@@ -1,12 +1,12 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bangers', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,4 +14,37 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
+    background-color: #EAE2B6;
+}
+
+h1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.box-container {
+    display: flex;  
+}
+
+@media (max-width: 800px) {
+    .box-container {
+        flex-direction: column;
+        overflow: auto;
+    } 
+}
+
+.empty {
+    height: 150px;
+    width: 150px;
+    margin: 10px;
+    border: solid 3px #558776;
+    background: #A3A847;
+    display: flex;
+    flex-direction: row;
+}
+
+@media (max-width: 800px) {
+    body {
+        flex-direction: column;
+    } 
 }
