--- a/dragAndDrop/dragAndDrop.css
+++ b/dragAndDrop/dragAndDrop.css
@@ -14,7 +14,8 @@ body {
     overflow: hidden;
     height: 100vh;
     margin: 0;
-    background-color: #EAE2B6;
+    background: #A3A847;
+    
 }
 
 h1 {
@@ -38,13 +39,24 @@ h1 {
     width: 150px;
     margin: 10px;
     border: solid 3px #558776;
-    background: #A3A847;
+    background-color: #EAE2B6;
     display: flex;
     flex-direction: row;
 }
 
-@media (max-width: 800px) {
-    body {
-        flex-direction: column;
-    } 
+.fill {
+    background-image: url('https://source.unsplash.com/random/150x150');
+    height: 145px;
+    width: 145px;
+    cursor: pointer;
+}
+
+.hold {
+    border: solid 5px black;
+}
+
+.hovered {
+    background-color: #b9c76d;
+    border-color: whitesmoke;
+    border-style: dashed;
 }
