--- a/drawingApp/drawingApp.css
+++ b/drawingApp/drawingApp.css
@@ -21,10 +21,36 @@ body {
 }
 
 .toolbox {
+    margin-top: 20px;
     background-color: steelblue;
     border: 2px solid slateblue;
     display: flex;
     width: 804px;
     padding: 1rem;
+    border-radius: 15px;
+    margin: 20px;
 }
+
+/* Targeting the direct children of toolbox */
+.toolbox > * {
+    background-color: whitesmoke;
+    border: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    height: 50px;
+    width: 50px;
+    margin: .25rem;
+    padding: .25rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+/* Using a psudo-selector to target the last child of toolbox */
+.toolbox > *:last-child {
+    margin-left: auto;
+}
+
+
 
