Added event listener for clear functionality

--- a/drawingApp/drawingApp.css
+++ b/drawingApp/drawingApp.css
@@ -17,7 +17,8 @@ body {
 }
 
 #canvas {
-    border: 2px solid steelblue;
+    border: 3px solid steelblue;
+    background-color: whitesmoke;
 }
 
 .toolbox {
