--- a/kineticCSS/kineticCSS.css
+++ b/kineticCSS/kineticCSS.css
@@ -1,5 +1,5 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Monoton:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 
 * {
     box-sizing: border-box;
@@ -9,6 +9,7 @@ body {
     font-family: 'Monoton', sans-serif;
     background-color: #72147E;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -18,12 +19,16 @@ body {
 
 h1 {
    color: #FF5200;
+   font-size: 70px;
+   padding: 25px;
+   border: 3px solid #F21170;
+   margin-bottom: 150px;
 }
 
 .kinetic {
     position: relative;
-    height: 80px;
-    width: 80px;
+    height: 120px;
+    width: 120px;
 }
 
 /* when using "before" or "after" you have to use a content property */
@@ -34,6 +39,26 @@ h1 {
     left: 0;
     width: 0;
     height: 0;
-    border: 50px solid transparent;
+    border: 70px solid transparent;
+    border-bottom-color: #FA9905 ;
+    animation: rotateA 2s linear infinite 0.5s;
+}
 
+.kinetic::before {
+    content: '';
+    transform: rotate(90deg);
+}
+
+@keyframes rotateA {
+    0%, 25% {
+        transform: rotate(0deg)
+    }
+
+    50%, 75% {
+        transform: rotate(180deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
