--- a/kineticCSS/kineticCSS.css
+++ b/kineticCSS/kineticCSS.css
@@ -47,6 +47,7 @@ h1 {
 .kinetic::before {
     content: '';
     transform: rotate(90deg);
+    animation: rotateB 2s linear infinite;
 }
 
 @keyframes rotateA {
@@ -60,5 +61,19 @@ h1 {
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes rotateB {
+    0%, 25% {
+        transform: rotate(90deg)
+    }
+
+    50%, 75% {
+        transform: rotate(270deg);
+    }
+
+    100% {
+        transform: rotate(450deg);
     }
 }
