--- a/contentPlaceholder/contentPlaceholder.css
+++ b/contentPlaceholder/contentPlaceholder.css
@@ -1,17 +1,29 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Damion:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    background-color: #729c72;
+    font-family: 'Damion', sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     /* overflow: hidden; */
     height: 100vh;
     margin: 0;
+}
+
+.img {
+    max-width: 100%;
+}
+
+.card   {
+    box-shadow: 5px 10px 8px 10px #1b1818;
+    border-radius: 12px;
+    overflow: hidden;
+    width: 350px;
+    
 }
