--- a/contentPlaceholder/contentPlaceholder.css
+++ b/contentPlaceholder/contentPlaceholder.css
@@ -52,3 +52,27 @@ img {
     color: #1E212D;
     margin: 10px 0 20px;
 }
+
+.author {
+    display: flex;
+}
+
+.profile-img {
+    border-radius: 50%;
+    overflow: hidden;
+    height: 50px;
+    width: 50px;
+}
+
+.author-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 10px;
+    width: 100px;
+}
+
+.author-info small {
+    margin-top: 10px;
+
+}
