--- a/contentPlaceholder/contentPlaceholder.css
+++ b/contentPlaceholder/contentPlaceholder.css
@@ -84,6 +84,7 @@ img {
     #f6f7f8 20%,
     #f6f7f8 100%);
     background-size: 200% 100%;
+    animation: bgPos 1s linear infinite;
 }
 
 .animated-bg-text {
@@ -91,4 +92,15 @@ img {
     display: inline-block;
     margin: 0;
     height: 10px;
+    width: 100%;
+}
+
+@keyframes bgPos {
+    0% {
+        background-position: 50% 0;
+    }
+
+    100% {
+        background-position: 150 0;
+    }
 }
