Added hero styling

--- a/stickyNav/stickyNav.css
+++ b/stickyNav/stickyNav.css
@@ -3,15 +3,34 @@
 
 * {
     box-sizing: border-box;
+    margin:0;
+    padding: 0;
 }
 
 body {
     font-family: 'Bungee Shade', sans-serif;
+    color: #1C1427;
+    padding-bottom: 50px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* Nav Styling Here */
+
+.hero {
+    background-image: url('https://images.unsplash.com/photo-1620446132314-2a601ef366aa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #CCFFBD;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    overflow: hidden;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    background-position: bottom center;
     height: 100vh;
-    margin: 0;
+    margin-bottom: 20px;
 }
