--- a/stickyNav/stickyNav.css
+++ b/stickyNav/stickyNav.css
@@ -34,3 +34,13 @@ body {
     height: 100vh;
     margin-bottom: 20px;
 }
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, 0.4);
+}
