Added styling to all the content catagories

--- a/stickyNav/stickyNav.css
+++ b/stickyNav/stickyNav.css
@@ -33,6 +33,7 @@ body {
     background-position: bottom center;
     height: 100vh;
     margin-bottom: 20px;
+    z-index: -2;
 }
 
 .hero::before {
@@ -43,4 +44,27 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0, 0.4);
+    z-index: -1;
+}
+
+.hero h1 {
+    font-size: 47px;
+    margin: -20px 0 20px;
+}
+
+.hero p {
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
+.content h2, .content h3 {
+    font-size: 150%;
+    margin: 10px 0;
+
+}
+
+.content p {
+    color: 40394A;
+    line-height: 1.5;
+    letter-spacing: 1.5px;
 }
