--- a/stickyNav/stickyNav.css
+++ b/stickyNav/stickyNav.css
@@ -18,7 +18,22 @@ body {
     margin: 0 auto;
 }
 
-/* Nav Styling Here */
+.nav {
+    position: fixed;
+    background-color: #7ECA9C;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all .3s ease-in-out;
+}
+
+.nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20 0;
+    transition: all .3s ease-in-out;
+}
 
 .hero {
     background-image: url('https://images.unsplash.com/photo-1620446132314-2a601ef366aa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
@@ -59,7 +74,7 @@ body {
 
 .content h2, .content h3 {
     font-size: 150%;
-    margin: 10px 0;
+    margin: 20px 0;
 
 }
 
