--- a/stickyNav/stickyNav.css
+++ b/stickyNav/stickyNav.css
@@ -35,6 +35,34 @@ body {
     transition: all .3s ease-in-out;
 }
 
+.nav ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav a  {
+    color: #40394A;
+    text-decoration: none;
+    padding: 7px 15px;
+    transition: all .3s ease-in-out;
+}
+
+.nav.active {
+    background-color: azure;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.nav.active .container {
+    padding: 10px;
+}
+
+.nav a.current, nav a:hover {
+    color: #4af516;
+    font-weight: bold;
+}
+
 .hero {
     background-image: url('https://images.unsplash.com/photo-1620446132314-2a601ef366aa?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
     background-repeat: no-repeat;
