--- a/doubleVerticalSlider/dblSlider.css
+++ b/doubleVerticalSlider/dblSlider.css
@@ -9,12 +9,35 @@
 
 body {
     font-family: 'Teko', sans-serif;
-    height: 100vh;
 }
 
 .slider-container {
     position: relative;
     overflow: hidden;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
+    color: white;
+}
+
+.left-slide {
+    height: 100%;
+    width: 35%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.left-slide > div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.left-slide h1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    margin-top: -10px;
 }
