--- a/doubleVerticalSlider/dblSlider.css
+++ b/doubleVerticalSlider/dblSlider.css
@@ -41,3 +41,19 @@ body {
     margin-bottom: 10px;
     margin-top: -10px;
 }
+
+.right-slide {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 35%;
+    width: 65%;
+}
+
+.right-slide > div {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100%;
+    width: 100%;
+}
