--- a/doubleVerticalSlider/dblSlider.css
+++ b/doubleVerticalSlider/dblSlider.css
@@ -57,3 +57,22 @@ body {
     height: 100%;
     width: 100%;
 }
+
+button {
+
+}
+
+.slider-container .action-buttons button {
+    position: absolute;
+    left: 35%;
+    top: 50%;
+    z-index: 100;
+}
+
+.slider-container .action-buttons .down-button {
+    transform: translateX(-100%);
+}
+
+.slider-container .action-buttons .up-button {
+    transform: translateY(-100%);
+}
