--- a/doubleVerticalSlider/dblSlider.css
+++ b/doubleVerticalSlider/dblSlider.css
@@ -59,7 +59,23 @@ body {
 }
 
 button {
+    background-color: rgb(255, 255, 255, .80);
+    border: none;
+    color: grey;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 15px;
+    border-radius: 5px;
+}
 
+button:hover {
+    color: black;
+    background-color: white;
+
+}
+
+button:focus {
+    outline: none;
 }
 
 .slider-container .action-buttons button {
