--- a/doubleVerticalSlider/dblSlider.css
+++ b/doubleVerticalSlider/dblSlider.css
@@ -40,6 +40,11 @@ body {
     font-size: 40px;
     margin-bottom: 10px;
     margin-top: -10px;
+    text-transform: uppercase;
+}
+
+.left-slide p {
+    font-size: 22px;
 }
 
 .right-slide {
