--- a/githubProfiles/githubProfiles.css
+++ b/githubProfiles/githubProfiles.css
@@ -109,3 +109,14 @@ user-info ul li {
     margin-bottom: 0.5rem;
     display: inline-block;
 }
+
+@media (max-width: 500px) {
+    .card {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-form {
+        max-width: 425px;
+    }
+}
