Styled result container

--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -40,3 +40,23 @@ h2 {
     width: 400px;
     max-width: 100%;
 }
+
+.result-container {
+    background-color: #464F41;
+    color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    font-size: 18px;
+    letter-spacing: 1px;
+    padding: 15px, 10px;
+    height: 50px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.result-container #result {
+    word-wrap: break-word;
+    max-width: calc(100% -40px);
+}
