Styled settings and buttons

--- a/passwordGenerator/password.css
+++ b/passwordGenerator/password.css
@@ -31,6 +31,7 @@ body::before {
 h2 {
     margin: 10px 0px 20px;
     text-align: center; 
+    font-size: 40px;
 }
 
 .container {
@@ -40,6 +41,12 @@ h2 {
     width: 400px;
     max-width: 100%;
 }
+
+/* label {
+    font-size: 20px;
+    line-height: 27px;
+    padding: 5px;
+} */
 
 .result-container {
     background-color: #464F41;
@@ -59,4 +66,37 @@ h2 {
 .result-container #result {
     word-wrap: break-word;
     max-width: calc(100% -40px);
+}
+
+.result-container .btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+}
+
+.btn {
+    border: none;
+    color: white;
+    background-color: #5B8A72;
+    font-family: 17px;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-large {
+    display: block;
+    width: 100%;
+}
+
+
+.setting {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px;
+    font-size: 18px;
 }
