Styled body & squares

--- a/hoverBoard/hoverboard.css
+++ b/hoverBoard/hoverboard.css
@@ -7,11 +7,28 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #B31E6F;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
     margin: 0;
+}
+
+.container {
+    display: flex;
+}
+
+.square {
+    background-color: #1d1d1d;
+    box-shadow:  0 0 2px #000;
+    height: 16px;
+    width: 16px;
+    margin: 2px;
+    transition: 2s ease;
+}
+
+.square:hover {
+    transition-duration: 0s;
 }
