--- a/mobileTab/mobileTabNav.css
+++ b/mobileTab/mobileTabNav.css
@@ -63,3 +63,12 @@ body {
     padding: 10px;
     text-align: center;
 }
+
+.nav ul li p {
+    font-size: 12px;
+    margin: 2px 0;
+}
+
+.nav ul li:hover, nav ul li:active {
+    color: #A7FF83;  
+}
