Styled ratings and ratings container

--- a/userFeedback/userFeedback.css
+++ b/userFeedback/userFeedback.css
@@ -28,3 +28,19 @@ body {
     padding: 50px;
     max-width: 400px;
 }
+
+.panel-container strong {
+    line-height: 20px;
+}
+
+.ratings-container {
+    display: flex;
+    margin: 20px 0;
+}
+
+.rating {
+    flex: 1;
+    cursor: pointer;
+    padding: 20px;
+    margin: 10px 5px;
+}
