Added body and screen styling

--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -1,17 +1,23 @@
 /*Importing Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P:wght@400;700&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Press Start 2P', sans-serif;
+    overflow: hidden;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+}
+
+.screen {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     height: 100vh;
-    margin: 0;
+    width: 100vw;
 }
