--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -125,3 +125,12 @@ h1 {
     transform: translate(-50%, 150%);
     opacity: 1;
 } 
+
+.insect {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+}
+
