Added increaseScore function

--- a/insectCatchGame/style.css
+++ b/insectCatchGame/style.css
@@ -34,7 +34,7 @@ h1 #insect_icon {
     font-family: inherit;
     font-size: 20px;
     cursor: pointer;
-    background-color: #F6D887;
+    background-color: #C7753D;
 }
 
 .btn:hover {
